--- a/sway/config
+++ b/sway/config
@@ -5,7 +5,7 @@ set $up k
 set $right l
 set $term wezterm
 set $menu $HOME/.scripts/launcher.sh
-set $explorer $term start ranger
+set $explorer "wezterm start yazi"
 set $browser zen-browser
 
 gaps inner 6
@@ -28,9 +28,9 @@ exec swaync
 exec nm-applet
 exec --no-startup-id /usr/lib/xfce-polkit/xfce-polkit
 exec $HOME/.scripts/wall.sh
-exec udiskie -nt -m nested --appindicator -f "wezterm start -- ranger" --terminal wezterm
+exec udiskie -nt -m nested --appindicator -f "wezterm start yazi" --terminal wezterm
 exec swayosd-server
-exec_always caps2esc -m 1
+exec wl-clip-persist --clipboard both
 exec ~/.autostart.sh
 
 focus_follows_mouse no
@@ -57,9 +57,11 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 bindsym XF86AudioRaiseVolume exec swayosd-client --output-volume 5 --max-volume 200
-bindsym XF86AudioLowerVolume exec  swayosd-client --output-volume -5 --max-volume 200
+bindsym XF86AudioLowerVolume exec swayosd-client --output-volume -5 --max-volume 200
 bindsym XF86MonBrightnessUp  exec swayosd-client --brightness 10
 bindsym XF86MonBrightnessDown exec swayosd-client --brightness -10
+bindsym Shift+XF86AudioRaiseVolume exec swayosd-client --input-volume 5
+bindsym Shift+XF86AudioLowerVolume exec swayosd-client --input-volume -5
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioStop exec playerctl stop
 bindsym XF86AudioNext exec playerctl next
